New approach for header styling

--- a/gatsby/src/styles/_navbar.scss
+++ b/gatsby/src/styles/_navbar.scss
@@ -5,3 +5,10 @@
   top: 0;
   z-index: 100;
 }
+
+#page-header {
+  background-image: url("cdc-w9KEokhajKw-unsplash.jpg");
+  background-size: 100vw auto;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
