--- a/gatsby/src/styles/_navbar.scss
+++ b/gatsby/src/styles/_navbar.scss
@@ -7,6 +7,7 @@
 }
 
 #page-header {
+  background: black;
   background-image: url("cdc-w9KEokhajKw-unsplash.jpg");
   background-size: 100vw auto;
   background-position: center center;
